# binary-topic-model

./: .gitignore  README.md
code/: requirements.txt
code/jupyter/b-lda/: check.ipynb  lda_bernoulli_missing.ipynb  summary_stat.ipynb
code/jupyter/b-lda/.ipynb_checkpoints/: lda_bernoulli_missing-checkpoint.ipynb  make_input-checkpoint.ipynb  morph_text-checkpoint.ipynb
code/jupyter/b-lda/results/: loglik.eps  loglik.ps  neg_topwrods.csv  pdf2eps.sh  pos_topwrods.csv
code/jupyter/preprocess/: make_input.ipynb  morph_text.ipynb
code/jupyter/preprocess/.ipynb_checkpoints/: morph_text-checkpoint.ipynb
code/jupyter/scrape/: scrape_pdf_airport.ipynb
code/jupyter/scrape/.ipynb_checkpoints/: scrape_trax-checkpoint.ipynb
code/jupyter/separate_model/: good_bad.ipynb  lda_airport_good.ipynb
code/jupyter/separate_model/results/: bad_top_words.csv  good_bad_words.csv  good_top_words.csv  modeled_data_bad.csv  modeled_data_good.csv
code/lda/: CMakeLists.txt  lda_base.cpp  lda_base.h  lda_bernoulli.cpp  lda_bernoulli.h
code/lda/v1/: lda_base.cpp  lda_base.h  lda_bernoulli.cpp  lda_bernoulli.h
code/scrape/: scrape_trax.py
code/utils/: LDA.R  calc_lda_param.R  corpus.R  date.R  hold-out.R
